# duel-rustcore

./: .gitignore  CLAUDE.md  TASKS_PROMPT.md  build.sh  implementation_plan.md  pom.xml
.agents/skills/duel-rustcore/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json  settings.local.json
.claude/commands/: config-schema-and-code-sync.md  feature-development.md  feature-implementation-with-manager-class.md
.claude/homunculus/instincts/inherited/: duel-rustcore-instincts.yaml
.claude/skills/duel-rustcore/: SKILL.md
.cline/: settings.local.json
.cline/skills/everything-claude-code/: SKILL.md
.clinerules/: minecraft-security.md
.codex/: AGENTS.md
docs/: database.md
docs/superpowers/plans/: 2026-03-20-lobby-item-flags.md  2026-04-15-duels-hub-lobby-perms-friends-party-fixed-kit.md  2026-04-18-mysql-persistence-refactor.md
rating-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
rating-service/src/rating_service/: auth.py  config.py  main.py  models.py  rating.py  routes.py
rating-service/tests/: test_auth.py  test_config.py  test_models.py  test_rating.py  test_routes.py
src/main/java/net/rustcore/duel/: DuelsPlugin.java
src/main/java/net/rustcore/duel/arena/: ActiveArena.java  Arena.java  ArenaManager.java  CustomPoly2D.java  PlacedBlockTracker.java  SlimeArenaManager.java
src/main/resources/: config.yml  plugin.yml
src/main/resources/db/migrations/: V001__init.sql  V005__rating_columns.sql  V006__drop_elo_column.sql
src/main/resources/modes/: kitbuilder.yml  nodebuff.yml
(+76 files in other folders)
